Kubernetes/Ingress/clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-svc
  labels: 
    app: ksv-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ksv-nginx
  type: ClusterIP
